tests/paczka1/fuzzy1/12180077.err
Error in line 6: HTkoDY S724 51,0
Error in line 25: T2H2DmA A543 100,0
Error in line 34: dpUVelg A552 31,7
Error in line 24: dHVpKg S724 74,8
Error in line 36: dHVpKg A524 31,4
